src/objects/Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Client_Id__c</fullName>
        <defaultValue>&quot;viqapex&quot;</defaultValue>
        <label>Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <defaultValue>&quot;fd7ceb9c-f380-4c39-b340-83821747eb12&quot;</defaultValue>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <defaultValue>&quot;client_credentials&quot;</defaultValue>
        <label>Grant Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoiceIQ_App__c</fullName>
        <defaultValue>&quot;https://enviqst01apiapp.azurewebsites.net&quot;</defaultValue>
        <label>VoiceIQ App</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VoiceIQ_Auth__c</fullName>
        <defaultValue>&quot;https://enviqst01authapp.azurewebsites.net&quot;</defaultValue>
        <label>VoiceIQ Auth</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Settings</label>
    <pluralLabel>Settings</pluralLabel>
</CustomObject>